--- a/index.html
+++ b/index.html
@@ -341,6 +341,25 @@
                             </li>
                            
                             <!-- end portfolio item --> 
+                             <!-- start  portfolio item -->
+                             <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="aknadekujundused.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642696661/Koduleht/O_maja_akanakujundus_mockup_eolr0s.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tervist edendav kool</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                           
+                            <!-- end portfolio item --> 
                         </ul>
                     </div>
                 </div>
