matkarada ja toodefodod lisamine

--- a/index.html
+++ b/index.html
@@ -350,16 +350,50 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tervist edendav kool</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Akanade kujundused</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
-                           
-                            <!-- end portfolio item --> 
+                            </li>      
+                            <!-- end portfolio item -->
+                               <!-- start  portfolio item -->
+                               <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="toodefoodod_kindad.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642700089/Koduleht/IMG_0484_hzz79y.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Toodefodo kindad</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>      
+                           <!-- start portfolio item -->
+                           <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                            <a href="matkarada.html">
+                                <figure>
+                                    <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642701418/Koduleht/matkarata_xysubq.jpg" alt=""/></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle"> 
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Drang nach Osten</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                            </div>
+                                        </div> 
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <!-- end portfolio item -->                                
                         </ul>
                     </div>
                 </div>
