hindamse asjade lisamine

--- a/index.html
+++ b/index.html
@@ -393,7 +393,92 @@
                                 </figure>
                             </a>
                         </li>
-                        <!-- end portfolio item -->                                
+                        <!-- end portfolio item --> 
+                         <!-- start  portfolio item -->
+                             <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="deco_cut.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642748005/Koduleht/deco_cut_pniwid.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Deco cut instagram</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>      
+                               <!-- start portfolio item -->
+                               <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                <a href="tervisee_rada.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642748620/Koduleht/10_kukki_ja_istumissein_q2njjk.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">tervise rada </span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>         
+                             <!-- start  portfolio item -->
+                             <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="toodefoodod_kindad.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642750707/Koduleht/noortekeskus_logo_900x900px_du3qbz.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Toodefodo kindad</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                               <!-- start portfolio item -->
+                               <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                <a href="kak_100_tass.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642750151/Koduleht/Ametkooli_tassi_pakendi_mockup_900x900px_d4voxu.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">tervise rada </span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>      
+                             <!-- start  portfolio item -->
+                             <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="deco_cut.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642751767/Koduleht/j6ulukaart_jt5chb.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Deco cut instagram</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                        
                         </ul>
                     </div>
                 </div>
