--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img alt="" src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641635896/Koduleht/portree-02_xqjfbd.jpg">
                     </div>
                     <div class="col-12 col-md-6 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
-                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto">‎ <span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
+                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto"><span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
                         <div class="font-weight-600  text-extra-dark-gray text-large  text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top"> OLIVER JUSS  </div>
                         <div class="text-medium-gray text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                              KUJUNDUSGRAAFIK</div>
@@ -79,7 +79,7 @@
                             <li class="nav"><a href="javascript:void(0);" data-filter=".logo" class="light-gray-text-link text-very-small">Logo</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".disain" class="light-gray-text-link text-very-small">Disain</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".trükis" class="light-gray-text-link text-very-small">Trükis</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine" class="light-gray-text-link text-very-small">Hindamine</a></li>
+                                <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine" class="light-gray-text-link text-very-small">Kooli tööd 2021 / 2022</a></li>
                         </ul>                                                                           
                         <!-- end filter navigation -->
                     </div>
@@ -91,7 +91,7 @@
                         <ul class="hover-option8 portfolio-wrapper grid grid-loading grid-4col xl-grid-4col lg-grid-2col md-grid-2col sm-grid-2col xs-grid-1col gutter-medium">
                             <li class="grid-sizer"></li>
                             <!-- start portfolio item -->
-                            <li class="grid-item wow animate__fadeInUp trükis disain">
+                            <li class="grid-item wow animate__fadeInUp trükis disain hi">
                                 <a href="ajakiri.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_900/v1641308899/Koduleht/Kaanekujundus_800x800px_l4fxja.jpg" alt=""/></div>
@@ -454,7 +454,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">tervise rada </span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikooli 100 tassi pakend</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
                                                 </div>
                                             </div> 
@@ -478,7 +478,139 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                        
+                             <!-- start  portfolio item -->
+                             <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                            <a href="kak_100_kutse.html">
+                                <figure>
+                                    <div class="portfolio-img"><img
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642843895/Koduleht/kustse_900x900px_iorela.jpg"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kutse Kuressaare Ametikooli 100 sünnipäevale</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                                <!-- start  portfolio item -->
+                                <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                    <a href="komiks.html">
+                                        <figure>
+                                            <div class="portfolio-img"><img
+                                                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642865075/Koduleht/syte_mockup_pbv5mx.jpg"
+                                                    alt="" /></div>
+                                            <figcaption>
+                                                <div class="portfolio-hover-main">
+                                                    <div class="portfolio-hover-box align-middle">
+                                                        <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                        <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koomiks</span>
+                                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                    </div>
+                                                </div>
+                                            </figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                            <!-- start  portfolio item -->
+                            <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="kak_100_kutse.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img
+                                                src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642845049/Koduleht/saareliinid_2021_2022_mhlolj.jpg"
+                                                alt="" /></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle">
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kutse Kuressaare
+                                                        Ametikooli 100 sünnipäevale</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                                <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                    <a href="Elisabeth_Ellinorile_logo.html">
+                                        <figure>
+                                            <div class="portfolio-img"><img
+                                                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642847811/Koduleht/nora_logo_900x445px_pgnt13.jpg"
+                                                    alt="" /></div>
+                                            <figcaption>
+                                                <div class="portfolio-hover-main">
+                                                    <div class="portfolio-hover-box align-middle">
+                                                        <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                        <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Elisabeth Ellinorile logo</span>
+                                                        <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                    </div>
+                                                </div>
+                                            </figcaption>
+                                        </figure>
+                                    </a>
+                                </li>
+                                    <!-- start  portfolio item -->
+                                    <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                        <a href="komiks.html">
+                                            <figure>
+                                                <div class="portfolio-img"><img
+                                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642850522/Koduleht/koomiks_frtnna.jpg"
+                                                        alt="" /></div>
+                                                <figcaption>
+                                                    <div class="portfolio-hover-main">
+                                                        <div class="portfolio-hover-box align-middle">
+                                                            <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                            <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koomiks</span>
+                                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                        </div>
+                                                    </div>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </li>
+                            <!-- start portfolio item -->
+                            <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                <a href="film.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img
+                                                src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642855018/Koduleht/film_900x445px_hfxw7a.jpg"
+                                                alt="" /></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle">
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">film</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                </div>
+                                            </div>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                            <!-- end portfolio item -->
+                        <!-- start portfolio item -->
+                        <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                            <a href="dance_animatsioon.html">
+                                <figure>
+                                    <div class="portfolio-img"><video controls autoplay loop
+                                            src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1642861515/Koduleht/kustse_900x900px.jpg0290-0374_mokssi.mkv"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Animatsioon
+                                                </span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
                         </ul>
                     </div>
                 </div>
