cut_mov lisamine

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                              <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
                                 <a href="deco_cut.html">
                                     <figure>
-                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642748005/Koduleht/deco_cut_pniwid.jpg" alt=""/></div>
+                                        <div class="portfolio-img"><video controls autoplay loop src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1642875493/Koduleht/Screen_Recording_2022-01-11_at_09.39.01_zvfb1o.mov" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
